# ciphertext-generation

./: .gitignore  README.md  convert.slurm  flake.nix  pyproject.toml
.github/workflows/: discord-notif.yml  test.yml
encipherment/: cipher.py  homophones.py
plaintext-fetcher/: fetcher.py
src/: gen_training.py  main.py  map_genres.py  preprocess.py
src/cipher_generation/: cipher_manager.py  cipher_producer.py  config.py  drive_uploader.py  task.py
src/dataset_stats/: __init__.py  dataset_stats_aggregator.py  split_stats.py
src/drive/: cipher_manager.py  cipher_producer.py  drive_uploader.py  upload_manager.py
src/encipherment/: cipher.py  frequency.py  homophones.py
src/fetcher/: fetcher.py
src/fetching/: corpus_sampler.py  dataset_extractor.py  genre_mapper.py  taxonomy_mapper.py  text_splits.py
src/genre_mapping/: genre_mapper.py  gutendex_client.py  taxonomy_mapper.py
src/text_fetching/: fetcher.py
src/utils/: check_cipher_overlap.py  cipher_conversion.py  constants.py  drive.py  files.py  formatting.py  genres.py  logging.py  text_sampling.py  text_splits.py  validator.py  validators.py  z408.py
test/: conftest.py  test_gen_training.py  test_main.py  test_preprocess.py
test/cipher_generation/: test_cipher_manager.py  test_cipher_producer.py  test_config.py  test_drive_uploader.py  test_upload_manager.py
test/dataset_stats/: test_dataset_stats_aggregator.py  test_split_stats.py
test/drive/: test_cipher_producer.py  test_drive_uploader.py  test_upload_manager.py
test/e2e/: test_cipher_gen.py
test/encipherment/: test_cipher.py  (+2 more)
(+19 files in other folders)
