[project]
name = "ciphertext-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"