[project]
name = "ciphertext-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.13.1",
]
